# OpenShell

./: .gitattributes  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  README.md  dco-signatures.json  mise.toml  pyproject.toml
.agent/skills/debug-navigator-cluster/: SKILL.md
.agents/skills/debug-openshell-cluster/: SKILL.md
.agents/skills/generate-cli-reference/: SKILL.md
.agents/skills/generate-sandbox-policy/: examples.md
.agents/skills/migrate-inference-routing/: SKILL.md
.agents/skills/openshell-cli/: SKILL.md  cli-reference-generated.md  cli-reference.md
.claude/agent-memory/arch-doc-writer/: MEMORY.md
.github/: VOUCHED.td
.github/workflows/: acceptance-test.yml  dco.yml  publish.yml  release-dev.yml  release-tag.yml
architecture/: README.md  build-containers.md  gateway-deploy-connect.md  gateway-security.md  gateway-single-node.md  inference-routing.md  policy-advisor.md  providers.md  sandbox-connect.md  sandbox-providers.md  sandbox.md  security-policy.md  server-persistence.md  system-architecture.md
crates/navigator-bootstrap/: Cargo.toml
crates/navigator-bootstrap/src/: constants.rs  docker.rs  lib.rs  metadata.rs  push.rs  runtime.rs
crates/navigator-cli/: Cargo.toml
crates/navigator-cli/src/: cli_reference.rs  doctor_llm_prompt.md  lib.rs  main.rs  run.rs  ssh.rs
crates/navigator-cli/tests/: mtls_integration.rs  provider_commands_integration.rs  sandbox_create_lifecycle_integration.rs
crates/navigator-providers/: Cargo.toml
crates/navigator-providers/src/: context.rs  discovery.rs  lib.rs  test_helpers.rs
crates/navigator-providers/src/providers/: claude.rs  codex.rs  github.rs  gitlab.rs  mod.rs  openclaw.rs  opencode.rs  outlook.rs
crates/navigator-server/: Cargo.toml
crates/navigator-server/src/: grpc.rs  inference.rs  ssh_tunnel.rs
crates/navigator-server/src/persistence/: mod.rs  postgres.rs  sqlite.rs  tests.rs
crates/navigator-server/src/sandbox/: mod.rs
crates/navigator-server/tests/: multiplex_integration.rs  multiplex_tls_integration.rs
crates/openshell-bootstrap/: Cargo.toml
crates/openshell-bootstrap/src/: constants.rs  docker.rs  errors.rs  lib.rs  metadata.rs  paths.rs
crates/openshell-cli/src/: bootstrap.rs  edge_tunnel.rs  main.rs  run.rs  ssh.rs  tls.rs
crates/openshell-cli/tests/: ensure_providers_integration.rs  (+1 more)
crates/openshell-core/: Cargo.toml
crates/openshell-core/src/: lib.rs  paths.rs
crates/openshell-server/: Cargo.toml
deploy/docker/: Dockerfile.ci  Dockerfile.cluster  Dockerfile.server  cluster-entrypoint.sh  cluster-healthcheck.sh
docs/: conf.py  index.md  project.json  versions1.json
docs/about/: architecture.md  overview.md  release-notes.md  supported-agents.md
docs/get-started/: quickstart.md  run-claude.md  run-openclaw.md  run-opencode.md  tutorials.md
docs/inference/: configure-routes.md  configure.md  index.md
docs/reference/: architecture.md  cli.md  gateway-auth.md  policy-schema.md  support-matrix.md
docs/resources/: license.md
docs/safety-and-privacy/: index.md  network-access-rules.md  policies.md  security-model.md
docs/sandboxes/: community-sandboxes.md  create-and-manage.md  index.md  manage-gateways.md  manage-providers.md  manage-sandboxes.md  policies.md  providers.md  terminal.md
docs/tutorials/: first-network-policy.md  github-sandbox.md  index.md  run-openclaw.md  run-opencode.md
e2e/python/: test_inference_routing.py  test_sandbox_providers.py
examples/: openclaw.md
examples/inference/: README.md  inference.py  routes.yaml  sandbox-policy.yaml
examples/local-inference/: README.md
pr-preview/pr-195/: index.html  search.html  searchindex.js
pr-preview/pr-215/: index.html  objects.inv  search.html  searchindex.js
pr-preview/pr-224/: index.html  index.json  search.html  searchindex.js
pr-preview/pr-226/: index.json  searchindex.js
pr-preview/pr-236/: index.json  searchindex.js
pr-preview/pr-240/: index.html  index.json  search.html  searchindex.js  versions1.json
pr-preview/pr-252/: index.html  index.json  objects.inv  project.json  search.html  searchindex.js
pr-preview/pr-267/: index.html  index.json  objects.inv  search.html  searchindex.js
pr-preview/pr-294/: index.json  searchindex.js
pr-preview/pr-402/: index.html  index.json  objects.inv  search.html  searchindex.js
pr-preview/pr-495/: index.json  searchindex.js
pr-preview/pr-544/: index.html  index.json  objects.inv  project.json  search.html  searchindex.js
proto/: datamodel.proto  inference.proto  navigator.proto
python/navigator/: sandbox.py
python/openshell/: sandbox.py
scripts/: remote-deploy.sh  smoke-test-network-policy.sh
tasks/scripts/: cluster-bootstrap.sh  cluster-deploy-fast.sh  cluster-push-component.sh  cluster.sh  docker-build-image.sh  sandbox.sh
tests/sandbox_e2e/: test_sandbox_grpc.py
(+425 files in other folders)
