[package]
name = "navigator-cli"
description = "Navigator CLI tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "navigator"
path = "src/main.rs"

[dependencies]
navigator-bootstrap = { path = "../navigator-bootstrap" }
navigator-core = { path = "../navigator-core" }
navigator-providers = { path = "../navigator-providers" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
prost-types = { workspace = true }

# Async runtime
tokio = { workspace = true }

# gRPC client
tonic = { workspace = true, features = ["tls"] }

# CLI
clap = { workspace = true }
crossterm = { workspace = true }
dialoguer = "0.11"
indicatif = { workspace = true }
owo-colors = { workspace = true }

# HTTP client (health fallback)
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = "0.27"
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

# Error handling
miette = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Streams
futures = { workspace = true }

# URL parsing
url = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
rcgen = { version = "0.13", features = ["crypto", "pem"] }
tempfile = "3"
tokio-stream = { workspace = true }
